2007-10-08  Sebastien Pouliot  <sebastien@ximian.com>

	* ConsoleRunner.cs: Avoid WriteStaticFieldFromInstanceMethodRule 
	inside runner

2007-10-07  Sebastien Pouliot  <sebastien@ximian.com>

	* console.mdp: Now built with 2.0 rutime.

2006-10-15  Sebastien Pouliot  <sebastien@ximian.com>

	* gendarme.xsl: Create only one new browser-window per rule.

2006-10-09  Sebastien Pouliot  <sebastien@ximian.com>

	* ConsoleRunner.cs: Provide more information with assemblies. Fix some
	typos.
	* gendarme.xsl: Add links to mono-project.com for rules. Fix defects 
	count on assemblies. Add defects count on rules. Ensure all defects 
	are reported (even if the location is unknown). Display more details 
	on where the defect are found (assembly, location).
	* HtmlResultWriter.cs: Update signature for assemblies.
	* IResultWriter.cs: Update signature for assemblies.
	* Makefile.am: Rebuild gendarme.exe if the XSLT file changes.
	* TextResultWriter.cs: Update signature for assemblies.
	* XmlResultWriter.cs: Add fully-qualified assembly names when 
	outputing aasemblies. Add short-name and Uri when outputing rules.
	Both enables more useful HTML reports.

2006-09-28  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Adjust EXTRA_DIST to include project files in tarballs.

2006-09-28  Christian Birkl  <christian.birkl@gmail.com>

	* gendarme.csproj: Included ChangeLog
	* XmlResultWriter.cs, TextResultWriter.cs: Migrated untyped IList
	messages collection to typed MessageCollection class.
	  
2006-09-17  Sebastien Pouliot  <sebastien@ximian.com>

	* console.mdp: Update MonoDevelop project file
	* ConsoleRunner.cs: Add new options to the console runner.
	* HtmlResultWriter.cs: New. Output HTML reports using the XML
	output and the new XSL transform.
	* IResultWriter.cs: New. Interface for all reporters. Original code 
	from Christian Birkl adapted/merged with existing code.
	* Makefile.am: Add new files to the build.